2008-08-27  Timo Teras  <timo.teras@iki.fi>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/racoon/isakmp_var.h: remove duplicate declaration
	* src/racoon/session.c: initfds() needs to be called only if
	  monitored file descriptor numbers have changed

2008-08-06  Timo Teras  <timo.teras@iki.fi>
	From Krzysztof Piotr Oledzki <olel@ans.pl>:
	* src/racoon/{privsep.c|session.c|session.h}: revert parts of
	  2008-08-06 commit; the problem those changes address are already
	  handled in a sensible way by Cyrus Rahman's patch from 2008-03-06

2008-10-09  Timo Teras  <timo.teras@iki.fi>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/racoon/isakmp_quick.c: remove unbindph12() call that is
	  now done also in remph2()

2008-09-25  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed resending mechanism to have non-ESP
	  marker for retransmitted packets.

2008-09-19  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/{schedule.c|schedule.h|session.c|isakmp.c|
	  isakmp_var.h|handler.c|handler.h|isakmp_quick.c|pfkey.c|pfkey.h|
	  isakmp_inf.c|isakmp_xauth.c|isakmp_xauth.h|nattraversal.c}:
	  Change struct sched to be allocated be the caller and optimize
	  scheduler to be faster.
	* src/racoon/{isakmp.c|isakmp_quick.c|handler.c|handler.h|proposal.c|
	  admin.c|isakmp_cfg.c|isakmp_inf.c|isakmp_var.h|pfkey.c|
	  isakmp_xauth.c|cfparse.y|cfparse.l|racoon.conf.5|remoteconf.c|
	  remoteconf.h}: Implement ISAKMP SA rekeying configurable with
	  rekey {on|off|force} option in remote conf.

2008-09-17  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: Fixed port match in purge_ipsec_spi()
	  when NAT-T enabled and trying to purge non NAT-T SAs.

2008-09-09  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/pfkey.c: Some calls to set_port() were not correctly
	updated in the previous commit.

2008-09-03  Yvan Vanhullebus  <vanhu@netasq.com>
	From Tomas Mraz <tmraz@redhat.com>:
	* src/racoon/pfkey.c: Duplicate addresses in pk_sendxxx functions, as